Import of MSLAGLE/Algorithm-LeakyBucket-0.06 from CPAN.
gitpan-cpan-distribution: Algorithm-LeakyBucket
gitpan-cpan-version:      0.06
gitpan-cpan-path:         MSLAGLE/Algorithm-LeakyBucket-0.06.tar.gz
gitpan-cpan-author:       MSLAGLE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,5 @@ Revision history for Perl extension Algorithm::LeakyBucket.
 	- original version; created by h2xs 1.23 with options
 		-AX -n Algorithm::LeakyBucket
 
+0.06  Fri Jul 20 11:07:30 EDT 2012
+        - Removed old namspace base tricks.
