--- a/Changes
+++ b/Changes
@@ -7,7 +7,8 @@ Revision history for Perl extension Algorithm::LeakyBucket.
 0.06  Fri Jul 20 11:07:30 EDT 2012
         - Removed old namspace base tricks.
 
-0.07  Fri Jul 20 15:44:57 EDT 2012
-	- Some servers can't install Cache::Memecahed::Fast, we added support for Cache::Memcached 
-	  for those servers where its not an option.  It still checks to see if the C version is 
-	  there though.
+0.07  Fri Jul 20 14:58:01 EDT 2012
+	- Some servers can't install Cache::Memecahed::Fast, we added support for Cache::Memcached
+
+0.08  Mon Jul 30 14:14:42 EDT 2012
+	- Changed perldocs to match module name.
